unpackaged/main/default/objects/FPC_Lender_Rates__c/FPC_Lender_Rates__c.object-meta.xml
<CustomObject>
    <description>Bank or Lender Buy/Lease Rate(s) or Commission Rate(s)</description>
    <label>Lender Rate</label>
    <nameField>
        <label>Lender Rates ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lender Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>