unpackaged/main/default/objects/FPC_Lender_Rates__c/fields/BUY_RATE_HIGH__c.field-meta.xml
<CustomField>
    <fullName>BUY_RATE_HIGH__c</fullName>
    <description>High Lender Buy Rate</description>
    <inlineHelpText>High Lender Buy Rate</inlineHelpText>
    <label>BUY RATE HIGH</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>