unpackaged/main/default/objects/FPC_Lender_Rates__c/fields/Lender_Name__c.field-meta.xml
<CustomField>
    <fullName>Lender_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lender Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lender Rates (Lender Name)</relationshipLabel>
    <relationshipName>Lender_Rates1</relationshipName>
    <type>Lookup</type>
</CustomField>