unpackaged/main/default/objects/FPC_Lender_Rates__c/fields/MAX_POINTS_60__c.field-meta.xml
<CustomField>
    <fullName>MAX_POINTS_60__c</fullName>
    <description>Max Points for a 60 month term.</description>
    <inlineHelpText>Max Points for a 60 month term.</inlineHelpText>
    <label>MAX POINTS 60</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>