unpackaged/main/default/objects/FPC_Lender_Rates__c/fields/MAX_POINTS__c.field-meta.xml
<CustomField>
    <fullName>MAX_POINTS__c</fullName>
    <description>Maximum Points Allowed</description>
    <inlineHelpText>Type in the maximum points allowed by lender.</inlineHelpText>
    <label>MAX POINTS</label>
    <length>4</length>
    <type>Text</type>
</CustomField>