unpackaged/main/default/objects/FPC_Lender_Rates__c/fields/RATE_24__c.field-meta.xml
<CustomField>
    <fullName>RATE_24__c</fullName>
    <description>Buy rate for a 24 month term.</description>
    <inlineHelpText>Buy rate for a 24 month term.</inlineHelpText>
    <label>RATE 24</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>