unpackaged/main/default/objects/FPC_Lender_Rates__c/fields/RATE_60__c.field-meta.xml
<CustomField>
    <fullName>RATE_60__c</fullName>
    <description>Buy rate for a 60 month term.</description>
    <inlineHelpText>Buy rate for a 60 month term.</inlineHelpText>
    <label>RATE 60</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>