unpackaged/main/default/objects/FPC_Lender_Rates__c/fields/RATIO_HIGH__c.field-meta.xml
<CustomField>
    <fullName>RATIO_HIGH__c</fullName>
    <description>Ratio High - MCA</description>
    <inlineHelpText>Type in the high ratio for the opportunity.</inlineHelpText>
    <label>RATIO HIGH</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>