unpackaged/main/default/objects/FPC_Lender_Rates__c/fields/RATIO_LOW__c.field-meta.xml
<CustomField>
    <fullName>RATIO_LOW__c</fullName>
    <description>Ratio Low - MCA</description>
    <inlineHelpText>Type in the low ratio for the opportunity.</inlineHelpText>
    <label>RATIO LOW</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>