unpackaged/main/default/objects/FPC_Lender_Rates__c/fields/SPLIT_POINTS_HIGH__c.field-meta.xml
<CustomField>
    <fullName>SPLIT_POINTS_HIGH__c</fullName>
    <description>Split points high</description>
    <inlineHelpText>Split points high</inlineHelpText>
    <label>SPLIT POINTS HIGH</label>
    <length>4</length>
    <type>Text</type>
</CustomField>