unpackaged/main/default/objects/FPC_Lender_Rates__c/fields/SPLIT_POINTS_LOW__c.field-meta.xml
<CustomField>
    <fullName>SPLIT_POINTS_LOW__c</fullName>
    <description>Split points low.</description>
    <inlineHelpText>Split points low.</inlineHelpText>
    <label>SPLIT POINTS LOW</label>
    <length>4</length>
    <type>Text</type>
</CustomField>