unpackaged/main/default/objects/FPC_Lender_Rates__c/fields/TERM_HIGH__c.field-meta.xml
<CustomField>
    <fullName>TERM_HIGH__c</fullName>
    <description>High term</description>
    <inlineHelpText>Type in the longest term.</inlineHelpText>
    <label>TERM HIGH</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>