unpackaged/main/default/objects/FPC_Lender_Rates__c/fields/TERM_LOW__c.field-meta.xml
<CustomField>
    <fullName>TERM_LOW__c</fullName>
    <description>Low term</description>
    <inlineHelpText>Type in the shortest term.</inlineHelpText>
    <label>TERM LOW</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>