unpackaged/main/default/objects/FPC_Lender_Rates__c/fields/TIER__c.field-meta.xml
<CustomField>
    <fullName>TIER__c</fullName>
    <description>Credit Tier</description>
    <inlineHelpText>Pick the credit tier associated with the approval.</inlineHelpText>
    <label>TIER</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lender dependent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>