unpackaged/main/default/objects/FPC_Lender_Rates__c/fields/YIB_LOW__c.field-meta.xml
<CustomField>
    <fullName>YIB_LOW__c</fullName>
    <description>Year In Business Low</description>
    <inlineHelpText>Year In Business Low</inlineHelpText>
    <label>YIB LOW</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>